Working through login issues - session storing to database now, just need to convert user object to string
